--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <!--  <script src="palindrome.js"></script> -->
+    <script src="palindrome.js"></script> 
     <script src="even_uneven.js"></script>
 </body>
